[package]
name = "ray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cucumber = "0.15"
regex = "1"
ndarray = "0.15.6"
ndarray_linalg = "0.12.1"

[dev-dependencies]
futures = "0.3"

[[test]]
name = "cucumber" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest